[package]
name = "mootranscode"
version = "0.9.0"
description = "Video and audio transcoding for Moodle"
authors = ["Sheldon Young <sheldon@softdev.ca>"]
license = "Apache-2.0"
homepage = "https://github.com/softdevca/mootranscode"
repository = "https://github.com/softdevca/mootranscode"
documentation = "https://docs.rs/mootranscode"
edition = "2021"
keywords = ["Moodle", "transcode", "audio", "video"]
categories = ["command-line-utilities", "encoding"]
readme = "README.md"

[dependencies]
bb8 = "0.7"
bb8-postgres = "0.8"
clap = { version = "3.1", default-features = false, features = ["std", "cargo", "color", "env", "suggestions"] }
futures = "0.3"
log = { version = "0.4" }
#, features = ["max_level_trace", "release_max_level_debug"] }
sha-1 = "0.10"
simplelog = "0.11.2"
uuid = { version = "0.8", features = ["v4"] }
termcolor = "1.1"
tokio = { version  = "1.17", features = ["macros", "rt-multi-thread"] }
tokio-postgres = "0.7"
url = "2.2"
